# hades

./: .gitignore  .gitmodules  TODO.md  cross_file.txt  dtable  evtable  hades.code-workspace  idl_grammar.lark  meson.build
base_files/etc/: bashrc  group  inittab  passwd  profile
base_files/home/racemus/: hades.pcm
base_files/home/zag/: .bash_profile  .bashrc
freestnd_cpp_hdrs/: cstdarg
include/arch/: types.hpp  vmm.hpp
include/arch/x86/: hpet.hpp  pit.hpp  smp.hpp  syscall.hpp  types.hpp
include/driver/: ahci.hpp  dtable.hpp  dtable.hpp.in  keyboard.hpp  majtable.hpp  majtable.hpp.in  matchers.hpp  part.hpp
include/driver/bus/: pci.hpp
include/driver/net/: device.hpp  e1000.hpp  icmp.hpp  ip.hpp  protos.hpp  types.hpp
include/driver/pci/: ahci.hpp  net.hpp
include/driver/tty/: pty.hpp  tty.hpp
include/driver/video/: fbdev.hpp  vesa.hpp  vt.hpp
include/frg/: intrusive.hpp  list.hpp  unique.hpp  vector.hpp
include/fs/: cache.hpp  dev.hpp  ext2.hpp  rootfs.hpp  vfs.hpp
include/ipc/: evtable.hpp  evtable.hpp.in  link.hpp  message.hpp  port.hpp  wire.hpp
include/ipc/protocols/: blockdev.hpp  function.hpp.in  protocol.hpp.in
include/mm/: common.hpp  mm.hpp  pmm.hpp  vmm.hpp
include/smarter/: smarter.hpp
include/sys/sched/: event.hpp  sched.hpp  signal.hpp  time.hpp  wait.hpp
include/sys/x86/: apic.hpp
include/util/: elf.hpp  errors.hpp  function.hpp  io.hpp  lock.hpp  misc.hpp  ring.hpp  stivale.hpp  types.hpp
include/util/log/: log.hpp  nanoprintf.h  panic.hpp  qemu.hpp  serial.hpp
protocols/: blockdev.hdl
scripts/: dtable.py  evtable.py  idl.py  loop.sh  post.py
source/asm/: irq.asm  syscall.asm
source/cxx/: entry.cpp
source/cxx/arch/x86/: apic.cpp  copy.cpp  core.cpp  exception.cpp  hpet.cpp  irq.cpp  loader.cpp  pit.cpp  sched.cpp  signal.cpp  smp.cpp  ssp.cpp  syscall.cpp  time.cpp
source/cxx/arch/x86/bus/: pci.cpp
source/cxx/arch/x86/vmm/: syscall.cpp  vmm.cpp
source/cxx/driver/: ahci.cpp  dtable.cpp  keyboard.cpp  part.cpp
source/cxx/driver/bus/: pci.cpp
source/cxx/driver/net/: arp.cpp  checksum.cpp  e1000.cpp  ip.cpp  syscall.cpp
source/cxx/driver/pci/: ahci.cpp  net.cpp
source/cxx/driver/tty/: disciplines.cpp  pty.cpp  tty.cpp
source/cxx/driver/video/: fbdev.cpp  vesa.cpp  vt.cpp
source/cxx/fs/: cache.cpp  dev.cpp  ext2.cpp  fat.cpp  rootfs.cpp  syscall.cpp  vfs.cpp
source/cxx/ipc/: link.cpp  port.cpp  wire.cpp
source/cxx/mm/: ctx.cpp  mm.cpp  pmm.cpp  vmm.cpp
source/cxx/sys/: acpi.cpp  laihost.cpp  pci.cpp  runtime.cpp  ubsan.cpp
source/cxx/sys/sched/: event.cpp  loader.cpp  management.cpp  sched.cpp  signal.cpp  syscall.cpp  wait.cpp
source/cxx/util/: elf.cpp
source/cxx/util/log/: log.cpp
source/misc/: linker.ld
user/: cross_file.txt  native_file.txt  versions.txt
user/patches/binutils/: 0001-hades-edits.patch
user/patches/gcc/: 0001-hades-edits.patch
user/patches/mlibc/: 0001-hades-edits.patch
